--- a/JMapNavigator/pom.xml
+++ b/JMapNavigator/pom.xml
@@ -18,10 +18,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>it.unimi.dsi</groupId>
+			<artifactId>fastutil</artifactId>
+			<version>7.0.13</version>
 		</dependency>
 	</dependencies>
 </project>
