--- a/JMapNavigator/pom.xml
+++ b/JMapNavigator/pom.xml
@@ -22,5 +22,11 @@
 			<artifactId>fastutil</artifactId>
 			<version>7.0.13</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.2</version>
+		</dependency>
 	</dependencies>
 </project>
